tests/rosetta/out/Swift/array-length.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:05Z
func main() {
    var arr = ["apple", "orange", "pear"]
    print("Length of " + String(arr) + " is " + String(arr.count) + ".")
}
main()
